@@ -33,7 +33,6 @@ allow multiple GrOpen/GrClose calls for multiple XOpenDisplay calls
 implement QLength() dpy->qlen
 fill in font structure
 fix ParentRelative in XSetWindowBackgroundPixmap
-fix GrSetGCUseBackground force TRUE in putTrueColorImage
 
 arc drawing in nano-X is broken (sonar)
 XAllocColor doesn't actually write colormap in truecolor mode: error?
